@@ -7,9 +7,7 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper (>= 10.3~),
                gnome-control-center-dev (>= 1:3.4),
                gnome-pkg-tools (>= 0.11),
-               gettext,
                pkg-config (>= 0.22),
-               autoconf-archive,
                gobject-introspection (>= 1.49.1),
                gsettings-desktop-schemas-dev (>= 3.21.3),
                gtk-doc-tools,
@@ -78,8 +76,8 @@ Depends: ${gir:Depends},
          gir1.2-gweather-3.0,
          gir1.2-ibus-1.0 (>= 1.5.2),
          gir1.2-mutter-2 (>= 3.27.91),
-         gir1.2-networkmanager-1.0 [linux-any],
-         gir1.2-nmgtk-1.0 (>= 0.9.8) [linux-any],
+         gir1.2-nm-1.0 [linux-any],
+         gir1.2-nma-1.0 [linux-any],
          gir1.2-pango-1.0,
          gir1.2-polkit-1.0,
          gir1.2-rsvg-2.0,
